--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.psdevelop.tdandrapp.MainActivity"
-            android:exported="true">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,7 +32,7 @@
         <activity
             android:name="com.psdevelop.tdandrapp.ConnectionActivity"
             android:label="@string/online_act_title"
-            android:screenOrientation="fullSensor" >
+            android:screenOrientation="portrait" > 
         </activity>
         <activity
             android:name="com.psdevelop.tdandrapp.SectorList"
@@ -41,9 +41,9 @@
         <activity
             android:name="com.psdevelop.tdandrapp.ServiceDialog"
             android:label="=========="
-            android:screenOrientation="fullSensor" >
+            android:screenOrientation="portrait" > 
         </activity>
-        <service android:name="com.psdevelop.tdandrapp.GpsLocationDetector" />
+        <service android:name="com.psdevelop.tdandrapp.GpsLocationDetector"></service>
     </application>
 
 </manifest>
