--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -9,13 +9,13 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.3'
+        classpath 'com.android.tools.build:gradle:3.4.0'
     }
 }
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
